# moshi-base

./: .gitignore  FUTURE  Makefile  README.md  firebase.json  firestore.rules  pyproject.toml  storage.rules
.github/workflows/: test.yaml
scripts/: bump_version.sh
src/moshi/: __init__.py  activ.py  audio.py  exceptions.py  func.py  grade.py  language.py  log.py  msg.py  prompt.py  storage.py  transcript.py  user.py  utils.py  vocab.py  voice.py
src/moshi/llmfx/: base.py  grammar.py  msg_score.py  summarize.py  topics.py  tra_score.py  vocab.py
src/moshi/llmfx/prompts/: grammar.txt  msg_score_context.txt  msg_score_grammar.txt  msg_score_idiomaticity.txt  msg_score_politeness.txt  msg_score_vocab.txt  summarize.txt  topics_extract.txt  tra_score_overall_grade.txt  tra_score_skill_assessment.txt  tra_score_split_skills.txt  (+9 more)
src/moshi/vocab/: __init__.py  base.py  curric.py  msg.py  plan.py  usage.py
src/moshi_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/moshibase/: __init__.py  __version__.py  activ.py  audio.py  exceptions.py  func.py  language.py  log.py  model.py  msg.py  prompt.py  storage.py  user.py  utils.py  versioned.py
tests/: conftest.py  test_act.py  test_func.py  test_language.py  test_log.py  test_msg.py  test_plan.py  test_prompt.py  test_prompt.txt  test_storage.py  test_transcript.py  test_user.py  test_utils.py  test_versioned.py  test_vocab.py  test_voice.py
tests/data/: test_prompt.txt
tests/llmfx/: test_grammar.py  test_overall_score.py  test_score.py  test_summarize.py  test_topic.py  test_vocab_extract.py
